fix(tmux): statusbar fixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,9 +86,9 @@ set-option -gqw window-status-style "fg=#abb2bf,bg=#282c34,none"
 
 # status
 set-option -gq status-left ""
-set-option -gq status-right "#[fg=#abb2bf,bg=#282c34] #W #{?client_prefix,#[fg=#e06c75],#[fg=#98c379]}#[bg=#282c34]|> #[fg=#abb2bf,bg=#282c34] #S "
-set-window-option -gq window-status-format "#[fg=#282c34,bg=#61afef] #I #[fg=#abb2bf,bg=#282c34] #{b:pane_current_path} "
-set-window-option -gq window-status-current-format "#[fg=#282c34,bg=#e5c07b] #I #[fg=#abb2bf,bg=#282c34] #{b:pane_current_path} "
+set-option -gq status-right "#[fg=#abb2bf,bg=#282c34]#{s|$HOME|~|;s|.*/||:pane_current_path} #{?client_prefix,#[fg=#e06c75],#[fg=#98c379]}#[bg=#282c34]M"
+set-window-option -gq window-status-format "#[fg=#282c34,bg=#61afef] #I #[fg=#abb2bf,bg=#282c34] #{b:pane_current_command} "
+set-window-option -gq window-status-current-format "#[fg=#282c34,bg=#e5c07b] #I #[fg=#abb2bf,bg=#282c34] #{b:pane_current_command} "
 
 # Modes
 
