--- a/helix.toml
+++ b/helix.toml
@@ -33,6 +33,8 @@ display-inlay-hints = true
 esc = ["collapse_selection", "keep_primary_selection"]
 X = ["extend_line_up", "extend_to_line_bounds"]
 A-x = "extend_to_line_bounds"
+A-j = ["ensure_selections_forward", "extend_to_line_bounds", "extend_char_right", "extend_char_left", "delete_selection", "add_newline_below", "move_line_down", "replace_with_yanked"]
+A-k = ["ensure_selections_forward", "extend_to_line_bounds", "extend_char_right", "extend_char_left", "delete_selection", "move_line_up", "add_newline_above", "move_line_up", "replace_with_yanked"]
 
 [keys.normal.space]
 w = ":write"
