--- a/helix.toml
+++ b/helix.toml
@@ -6,6 +6,7 @@ mouse = false
 scrolloff = 8
 rulers = [80]
 true-color = true
+color-modes = true
 bufferline = "multiple"
 
 [editor.cursor-shape]
@@ -19,11 +20,22 @@ hidden = false
 [editor.statusline]
 left = ["mode", "spinner", "version-control"]
 center = ["file-name"]
-right = ["diagnostics", "selections", "position", "file-encoding", "file-line-ending", "file-type"]
+right = [
+  "diagnostics",
+  "selections",
+  "position",
+  "file-encoding",
+  "file-line-ending",
+  "file-type",
+]
 separator = "│"
 mode.normal = "NORMAL"
 mode.insert = "INSERT"
 mode.select = "SELECT"
+
+[editor.indent-guides]
+render = true
+
 
 [editor.lsp]
 display-messages = true
@@ -33,8 +45,27 @@ display-inlay-hints = true
 esc = ["collapse_selection", "keep_primary_selection"]
 X = ["extend_line_up", "extend_to_line_bounds"]
 A-x = "extend_to_line_bounds"
-A-j = ["ensure_selections_forward", "extend_to_line_bounds", "extend_char_right", "extend_char_left", "delete_selection", "add_newline_below", "move_line_down", "replace_with_yanked"]
-A-k = ["ensure_selections_forward", "extend_to_line_bounds", "extend_char_right", "extend_char_left", "delete_selection", "move_line_up", "add_newline_above", "move_line_up", "replace_with_yanked"]
+A-j = [
+  "ensure_selections_forward",
+  "extend_to_line_bounds",
+  "extend_char_right",
+  "extend_char_left",
+  "delete_selection",
+  "add_newline_below",
+  "move_line_down",
+  "replace_with_yanked",
+]
+A-k = [
+  "ensure_selections_forward",
+  "extend_to_line_bounds",
+  "extend_char_right",
+  "extend_char_left",
+  "delete_selection",
+  "move_line_up",
+  "add_newline_above",
+  "move_line_up",
+  "replace_with_yanked",
+]
 
 [keys.normal.space]
 w = ":write"
